<resources>
    <string name="app_name">afterclass</string>
    <string name="action_settings">Settings</string>
    <string name="Home">home</string>
    <string name="title_activity_navigate_to">NavigateTo</string>
    <string name="hello">hello</string>
    <string name="drawopen">Drawopen</string>
    <string name="drawclosed">Drawclosed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="tabs">
        <item>Home</item>
        <item>Recent</item>
        <item>Points</item>
    </string-array>
    <string name="title_activity_vector">VectorActivity</string>
    <string name="title_activity_search">searchActivity</string>
    <string name="Typequestion">Type Your Question</string>
    <string name="title_activity_answer_question">AnswerQuestion</string>
    <string name="title_activity_question">Details</string>
    <string name="title_activity_nested_navigation">NestedNavigation</string>
    <string name="title_activity_subject_classes">SubjectClasses</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_search_bar">SearchBarActivity</string>
    <string name="title_activity_student_question">StudentQuestion</string>
    <string name="title_activity_student_answer">StudentAnswer</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="calendar">Calendar Activity</string>
    <string name="myprofile">My Profile</string>
    <string name="NavigateDefault">Navigate To Class (DEFAULT-UPDATE)</string>
    <string name="ChangeMe">Change me</string>
    <string name="StudentId">studentId</string>
    <string name="points">points</string>
    <string name="Answer">Answer</string>
    <string name="Hello_World">Hello World</string>
    <string name="Image" />
    <string name="Send">Send</string>
    <string name="Points">Points</string>
    <string name="Dummy_Text">Dummy Text</string>
    <string name="SearchId">SearchId</string>
    <string name="Points_string">Points</string>
    <string name="Student_Answer">Student Answer</string>
    <string name="Id">Id</string>
    <string name="StudentIdPoints">Points</string>
    <string name="Student_Question">Student Question</string>
    <string name="id">Id</string>
    <string name="StudentQuestionPoints">Points</string>
    <string name="dummytext">Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,Dummy Text,</string>
    <string name="ID">ID</string>
    <string name="TimeCreated">TimeCreated</string>
    <string name="PointsId">Points</string>
    <string name="StudentIds">StudentId</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="AnswerId">answerId</string>
    <string name="AnswerPoints">Points</string>
    <string name="Vote_Up">Vote Up</string>
    <string name="zero">0</string>
    <string name="hello_number_1">Hello number 1</string>
    <string name="Payme">PayMe</string>
    <string name="OneHundredPoints">OneHundredPoints</string>
    <string name="FiveHundredPoints">FiveHundredPoints</string>
    <string name="OneThousandPoints">OneThousandPoints</string>
    <string name="AddToCourses">Add To Courses</string>
    <string name="title_activity_payment_store">PaymentStore</string>
    <string name="DeleteCourses">Delete From Courses</string>
    <string name="title_activity_tags">Tags</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
</resources>
