<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f3f3f3"
                    android:paddingBottom="2dp"
                    android:id="@+id/json_layout">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardviewAnswer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            card_view:cardElevation="1.5dp"
            card_view:cardCornerRadius="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff">
                <TextView
                    android:id="@+id/StudentAnswerText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/Student_Answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/Id"
                    android:id="@+id/StudentAnswerId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/StudentId"
                    android:text="@string/StudentIdPoints"
                    android:gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_alignBottom="@+id/questionText"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>




