<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f3f3f3"
                    android:paddingBottom="2dp"
                    android:id="@+id/json_layout">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardviewAnswer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            card_view:cardElevation="1.5dp"
            card_view:cardCornerRadius="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff">
                <TextView
                    android:id="@+id/StudentQuestionText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/Student_Question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/id"
                    android:id="@+id/StudentQuestionId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/StudentQuestionPoints"
                    android:text="@string/StudentQuestionPoints"
                    android:gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_alignBottom="@+id/questionText"/>

<TextView
    android:id="@+id/myVotes"
    android:text="vote"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/isNewInstance"
    android:layout_alignLeft="@+id/isNewInstance"
    android:layout_alignStart="@+id/isNewInstance" />
                <TextView
                    android:id="@+id/isNewInstance"
                    android:text="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/StudentQuestionText"
                    android:layout_alignRight="@+id/StudentQuestionPoints"
                    android:layout_alignEnd="@+id/StudentQuestionPoints" />
                <TextView
                    android:id="@+id/myRepliesStudent"
                    android:text="replies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/myVotes"
                    android:layout_alignBottom="@+id/myVotes"
                    android:layout_toRightOf="@+id/highlightCard"
                    android:layout_toEndOf="@+id/highlightCard" />
                <ImageView
                    android:id="@+id/highlightCard"
                    android:background="#4A90E2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/StudentQuestionText"
                    android:layout_toRightOf="@+id/StudentQuestionId"
                    android:layout_toEndOf="@+id/StudentQuestionId" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>



