<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivitys.QuestionActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewQuestion"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_below="@+id/app_bar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Text_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pointsText"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_toEndOf="@+id/studentImage"
                android:layout_toRightOf="@+id/studentImage"
                android:maxLines="7"
                android:paddingBottom="40dp"
                android:scrollbars="vertical"
                android:text="@string/dummytext"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/studentImage"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:paddingLeft="10dp"

                android:src="@drawable/medical"
                android:layout_alignTop="@+id/Text_question"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/questionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/studentImage"
                android:text="@string/StudentId"
                android:textColor="#FFFFFF"
                android:textSize="1dp" />

            <TextView
                android:id="@+id/TimeCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Text_question"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/Text_question"
                android:paddingLeft="10dp"

                android:paddingBottom="12dp"
                android:text="@string/TimeCreated"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="63dp"
                android:layout_marginStart="63dp"
                android:paddingBottom="12dp"
                android:text="Share"
                android:background="@drawable/ic_share"
                android:textSize="15sp"
                android:layout_alignTop="@+id/TimeCreated"
                android:layout_toRightOf="@+id/TimeCreated"
                android:layout_toEndOf="@+id/TimeCreated">
            </ImageButton>

            <com.like.LikeButton
                android:id="@+id/like_Button_QuestionActvity"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                app:icon_size="14dp"
                app:icon_type="heart" />

            <TextView
                android:id="@+id/pointsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/points" />

            <TextView
                android:id="@+id/questionActivityVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/studentQuId"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:paddingBottom="11dp"
                android:paddingRight="20dp"
                android:text="10"
                android:textSize="17dp" />


            <TextView
                android:id="@+id/studentQuId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TimeCreated"
                android:layout_alignBottom="@+id/TimeCreated"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="StudentQuId"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:textSize="1dp" />

            <TextView
                android:id="@+id/courseCodeQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/studentQuId"
                android:layout_toEndOf="@+id/studentQuId"
                android:layout_toRightOf="@+id/studentQuId"
                android:text="classCode"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="12dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Question_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Question_Background_Bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardviewQuestion"></android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Question_Background_Bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/primaryColor"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/CustomToolBarTheme">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <EditText
        android:id="@+id/QuestionEditText"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/rounded_send_button"
        android:gravity="bottom"
        android:textColor="#000000"

        android:imeOptions="actionDone" />
    <Button
        android:id="@+id/AnswerPostButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/white"
        android:onClick="QuestionActivityOnClick"
        android:text="@string/Answer"
        android:background="@android:color/transparent"

       />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</RelativeLayout>