<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="#f3f3f3"
              android:paddingBottom="2dp"
              android:id="@+id/json_layout">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardviewAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="1.5dp"
        card_view:cardCornerRadius="0dp">

        <RelativeLayout
            android:id="@+id/answerlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">
            <TextView
                android:text="@string/AnswerId"
                android:id="@+id/answerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/medical"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:paddingLeft="10dp"
                android:id="@+id/studentImage"
                android:layout_below="@+id/answerId"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/answerText"
                android:textSize="14sp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:text="@string/dummytext"
                android:layout_width="wrap_content"
                android:paddingRight="10dp"

                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/studentImage"
                android:layout_toRightOf="@+id/studentImage"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/VoteTextView"
                android:layout_below="@+id/answerText"
                android:layout_toRightOf="@+id/thumb_viewpager"
                android:layout_toEndOf="@+id/thumb_viewpager" />
            <TextView
                android:id="@+id/replies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answerText"
                android:layout_marginLeft="42dp"
                android:layout_marginStart="42dp"
                android:layout_toEndOf="@+id/TimeCreated"
                android:layout_toRightOf="@+id/TimeCreated"
                android:paddingBottom="12dp"
                android:text="Reputation"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/TimeCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/answerText"
                android:layout_below="@+id/answerText"
                android:layout_alignStart="@+id/answerText"
                android:paddingLeft="10dp"
                android:paddingBottom="12dp"
                android:text="@string/TimeCreated"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="false"
                android:textSize="1dp"
                android:textColor="#FFFFFF"
                android:id="@+id/studentVotedAnswer"
                android:layout_alignBottom="@+id/replies"
                android:layout_toLeftOf="@+id/answerText"
                android:layout_toStartOf="@+id/answerText"/>

            <com.like.LikeButton
            app:icon_type="thumb"
            app:icon_size="14dp"
            android:id="@+id/thumb_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/VoteTextView"
            android:layout_toRightOf="@+id/replies"
            android:layout_marginLeft="50dp"
            android:layout_alignBottom="@+id/VoteTextView" />

            <TextView
                android:textSize="16sp"
                android:id="@+id/username"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:text="username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/studentImage"
                android:layout_toEndOf="@+id/studentImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="StudentId"
                android:id="@+id/studentId"
                android:layout_above="@+id/studentVotedAnswer"
                android:layout_alignRight="@+id/answerId"
                android:layout_alignEnd="@+id/answerId" />

            <com.like.LikeButton
                app:icon_type="star"
                app:icon_size="25dp"
                android:id="@+id/check"
                app:like_drawable="@drawable/checkmark"
                app:unlike_drawable="@drawable/uncheckedmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/answerText"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>



